Fixed item name overflow

--- a/themes/poe.scss
+++ b/themes/poe.scss
@@ -32,14 +32,15 @@
     padding: 0px 6.08519px;
   }
 
+  .lc, .descrText span, .secDescriptionText span {
+    display: inline-block;
+    padding: 0px 10px;
+  }
+
   header {
     height: 33px;
     font-size: 19px;
     line-height: 1em;
-
-    .item-name {
-      padding: 7.23428px 30px;
-    }
 
     &.double-line {
       height: 53px;
@@ -49,14 +50,6 @@
         .name-left:after,
         .name-right:after {
           height: 53px;
-        }
-      }
-
-      .item-name {
-        padding: 5.18323px 45px 2.59162px 45px;
-
-        &.type-line {
-          padding: 2.59162px 45px 5.18323px 45px;
         }
       }
 
@@ -134,6 +127,10 @@
 
       .item-name {
         color: #c8c8c8;
+
+        .lc {
+          padding: 7.23428px 30px 7.23428px 30px;
+        }
       }
     }
 
@@ -155,6 +152,10 @@
 
       .item-name {
         color: #8888ff;
+
+        .lc {
+          padding: 7.23428px 30px 7.23428px 30px;
+        }
       }
     }
 
@@ -169,10 +170,18 @@
 
       &.double-line {
         background-image: url(./poe/image/header-rare-double.png);
+
+        .item-name .lc {
+          padding: 5.18323px 45px 2.59162px 45px;
+        }
       }
 
       .item-name {
         color: #ffff77;
+
+        .lc {
+          padding: 7.23428px 30px 7.23428px 30px;
+        }
       }
 
       .name-left {
@@ -194,10 +203,18 @@
 
       &.double-line {
         background-image: url(./poe/image/header-unique-double.png);
+
+        .item-name .lc {
+          padding: 5.18323px 45px 2.59162px 45px;
+        }
       }
 
       .item-name {
         color: #af6025;
+
+        .lc {
+          padding: 7.23428px 30px 7.23428px 30px;
+        }
       }
 
       .name-left {
